[gd_scene load_steps=3 format=2]

[ext_resource path="res://data/editor/scripts/Editor.gd" type="Script" id=1]
[ext_resource path="res://data/editor/assets/avatar.tscn" type="PackedScene" id=2]

[node name="Editor" type="Control"]
visible = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" type="Control" parent="." groups=["editor_main"]]
margin_right = 40.0
margin_bottom = 40.0

[node name="avatar" parent="main" instance=ExtResource( 2 )]
margin_left = 760.0
margin_top = 180.0
margin_right = 910.0
margin_bottom = 385.0

[node name="topMenu" type="HBoxContainer" parent="main"]
margin_right = 1000.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saveSessionToFile" type="Button" parent="main/topMenu"]
margin_right = 135.0
margin_bottom = 40.0
text = "save session to file"

[node name="openSessionFromFile" type="Button" parent="main/topMenu"]
margin_left = 139.0
margin_right = 294.0
margin_bottom = 40.0
text = "open session from file"

[node name="setToActive" type="Button" parent="main/topMenu"]
margin_left = 298.0
margin_right = 497.0
margin_bottom = 40.0
text = "set current dialogue to active"

[node name="resetActiveDialogue" type="Button" parent="main/topMenu"]
margin_left = 501.0
margin_right = 659.0
margin_bottom = 40.0
text = "reset unsaved changes"

[node name="options" type="VBoxContainer" parent="main"]
margin_top = 60.0
margin_right = 125.0
margin_bottom = 460.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help" type="CheckBox" parent="main/options"]
margin_right = 125.0
margin_bottom = 24.0
text = "show help"

[node name="advanced" type="CheckBox" parent="main/options"]
margin_top = 28.0
margin_right = 125.0
margin_bottom = 52.0
text = "show advanced"

[node name="keymap" type="RichTextLabel" parent="main"]
margin_top = 130.0
margin_right = 200.0
margin_bottom = 530.0
text = "LMB to select nodes
CTRL+LMB to edit node value
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="expand" type="Button" parent="main" groups=["editor_main"]]
margin_top = 580.0
margin_right = 149.0
margin_bottom = 634.0
rect_rotation = -90.0
text = "Dialogue files"

[node name="variables" type="Panel" parent="main"]
margin_left = 1690.0
margin_top = 395.0
margin_right = 1886.0
margin_bottom = 749.0

[node name="vbox" type="VBoxContainer" parent="main/variables"]
margin_right = 40.0
margin_bottom = 40.0

[node name="hbox" type="HBoxContainer" parent="main/variables/vbox"]
margin_right = 138.0
margin_bottom = 24.0

[node name="check" type="CheckBox" parent="main/variables/vbox/hbox"]
margin_right = 24.0
margin_bottom = 24.0

[node name="variable" type="Label" parent="main/variables/vbox/hbox"]
margin_left = 28.0
margin_top = 5.0
margin_right = 79.0
margin_bottom = 19.0
text = "Variable"

[node name="separator" type="VSeparator" parent="main/variables/vbox/hbox"]
margin_left = 83.0
margin_right = 87.0
margin_bottom = 24.0

[node name="value" type="Button" parent="main/variables/vbox/hbox"]
margin_left = 91.0
margin_right = 138.0
margin_bottom = 24.0
text = "Value"

[node name="hbox2" type="HBoxContainer" parent="main/variables/vbox"]
margin_top = 28.0
margin_right = 138.0
margin_bottom = 52.0

[node name="check" type="CheckBox" parent="main/variables/vbox/hbox2"]
margin_right = 24.0
margin_bottom = 24.0

[node name="variable" type="Label" parent="main/variables/vbox/hbox2"]
margin_left = 28.0
margin_top = 5.0
margin_right = 79.0
margin_bottom = 19.0
text = "Variable"

[node name="separator" type="VSeparator" parent="main/variables/vbox/hbox2"]
margin_left = 83.0
margin_right = 87.0
margin_bottom = 24.0

[node name="value" type="Button" parent="main/variables/vbox/hbox2"]
margin_left = 91.0
margin_right = 138.0
margin_bottom = 24.0
text = "Value"

[connection signal="pressed" from="main/topMenu/saveSessionToFile" to="." method="_on_saveSessionToFile_pressed"]
[connection signal="pressed" from="main/topMenu/openSessionFromFile" to="." method="_on_openSessionFromFile_pressed"]
[connection signal="pressed" from="main/topMenu/setToActive" to="." method="_on_setToActive_pressed"]
[connection signal="pressed" from="main/topMenu/resetActiveDialogue" to="." method="_on_resetActiveDialogue_pressed"]
[connection signal="toggled" from="main/options/help" to="." method="_on_help_toggled"]
[connection signal="toggled" from="main/options/advanced" to="." method="_on_advanced_toggled"]
[connection signal="pressed" from="main/expand" to="." method="_on_expand_pressed"]
